Fix Url link to World Visions

--- a/index.html
+++ b/index.html
@@ -2044,7 +2044,7 @@
       </div>
       <div id="burgDetails">
         <a id="burgGenerator" target="_blank" > 
-          City Details by dnd5e-town-generator
+          Howling Sails World Vision View
         </a> 
         <hr>
       <div id="burgBottom">
