--- a/index.html
+++ b/index.html
@@ -3592,7 +3592,7 @@
     <div id="saveMapData" style="display: none" class="dialog">
       <div style="margin-top: .3em">
         <strong>Save map to</strong>
-        <button onclick="dowloadMap()" data-tip="Download .map file to your local disk. Shortcut: Ctrl + S">machine</button>
+        <button onclick="downloadMap()" data-tip="Download .map file to your local disk. Shortcut: Ctrl + S">machine</button>
         <button onclick="saveToDropbox()" data-tip="Save .map file to your Dropbox. Shortcut: Ctrl + C">dropbox</button>
         <button onclick="quickSave()" data-tip="Save the project to browser storage. It can be unreliable. Shortcut: F6">browser</button>
       </div>
